# csdn

./: .gitignore  README.md  donate.md
23/12/llamaindex_rag_demo/: 1.py  llamaindex_m3e_qwen0.5B_RAG.ipynb
23/12/pandas_相同属性列合并/: code.py  readme.md
24/03/: m3e_RAG.ipynb
24/03/Doccano标注结果转换为BIO格式/: guihua.jsonl  out.txt  readme.md
24/03/cluster/: kmeans_pytorch.ipynb  readme.md
24/03/m3e_rag/: readme.md
24/03/ner_eval_diy/: readme.md
24/03/pdf_txt_doccano/: filters.py  pdf_txt_doccano.py
24/04/convert_doccano_llm/: convert_doccano_llm.ipynb  readme.md
24/04/doccano_trans/: core.py  out.jsonl  readme.md  utils.py
24/04/tran_llm_doccano/: doccano_import.jsonl  llm_predict.jsonl  readme.md  tran_llm_doccano.ipynb
24/04/vllm/: vllm_demo.ipynb
24/07/few_shot_prompt/: langchain_fewshot.ipynb
24/07/few_shot_sft/: build_llm_data.ipynb  eval.sh  infer_eval.py  readme.md  see_result.ipynb  settings.py  train.sh
24/09/bert_cls/: bert.ipynb
24/09/tokenizer_pad/: pad_vs.ipynb
24/10/linux磁盘挂载/: readme.md
24/10/专利入库/: readme.md
24/10/企业入库/: code.py  readme.md
24/11/LLM异步API调用/: readme.md
24/11/async_llm_api/: core.py  readme.md  vllm_api.yaml
24/11/llamafactory_batch_infer/: async_infer.ipynb  async_infer.py  batch_infer.yaml  build_dataset.ipynb  readme.md
24/11/mysql_note/: readme.md
24/11/企业专利查询/: build_patent_person.py  query_patent_cnt_score.py  readme.md
25/: shell.md
25/01/公司名称相似筛选/: vector_company.ipynb
25/01/文本相似_企业表筛选_实战/: readme.md  rule.ipynb  rule.py  vector.ipynb
25/02/LLamaFactory_VLLM_infer/: infer.sh  vllm_infer.py
25/02/SFT/: SFT.drawio  infer.ipynb  readme-cnblog.md  readme.md  train.ipynb
25/02/data_collator/: demo.ipynb  readme.md
25/02/gparted/: gparted磁盘分区.md
25/02/llm_industry_cls_infer/: build_infer_dataset.ipynb  generate_dataset.py
25/02/markdown博客写作图片自动上传/: demo-cnblog.md  demo.md  markdown博客写作图片自动上传-cnblog.md  markdown博客写作图片自动上传.md
25/02/pre_train/: data.json.demo  infer.ipynb  readme-cnblog.md  readme.md  train.ipynb
25/02/stata_vs_csv/: readme.md  trans2csv.ipynb  trans2csv.py
25/02/torch_nn_pad/: demo.ipynb  llm_loss_pad.drawio  readme-cnblog.md  readme.md
25/03/baidu_map_api/: 1_get_lon_lat.py  2_parse_prov_city.ipynb  3_路径规划数据构建.ipynb  4_test_路径规划_API调用.ipynb  4_路径规划_API.py  5_构建区域协同矩阵.ipynb  blog.md  detail.md  get_lon_lat.py  readme.md  utils.py  两地距离与通勤时间.drawio
25/04/02/: paper_read-cnblog.md  paper_read.md
25/04/agentic_rag/: paper_read.tex
25/04/embedding_finetune/: readme-csdn.md  readme.md
25/04/math_agent/: readme.md  (+2 more)
25/08/amap_async_mongo/: README.md  pyproject.toml
25/08/amap_async_mongo/src/amap_mongo/: __init__.py  ali.py  argument.py  data.py  mongo_db.py  sync.py  utils.py
25/08/amap_async_mongo/tests/jupyter/: project_path.py  test_data.ipynb  test_mongodb.ipynb  test_sync.ipynb
25/08/amap_lon_lat/: README.md  export_excel.py  main.py  pyproject.toml
25/08/industry_classify_qwen3/: README.md  build_prompt.ipynb  export.ipynb  prompts.py  pyproject.toml
26/01/bert_experiment_template/: README.md  pyproject.toml
26/01/bert_experiment_template/py_scripts/: core.py  eval.py  eval_test.py  train.py
26/01/bert_experiment_template/result/: show_results.ipynb
26/01/bert_experiment_template/scripts/: batch_eval.sh  batch_train.sh  eval.sh  eval_test.sh  train.sh
26/01/bert_experiment_template/src/Classify/abc/: arguments.py  data.py  trainer.py
26/01/bert_experiment_template/src/Classify/base/: model.py
26/01/bert_experiment_template/src/classify/: arguments.py  trainer.py
26/03/sglang_claude/: README.md  blog.md  docker_9B.sh  docker_run.sh  lite_llm.yaml  pyproject.toml  run.sh
KnowledgeGraph/ner_compute/: compute.py
machine_learning/: TF-IDF sklearn聚类.ipynb  kmeans_pytorch.ipynb
(+144 files in other folders)
