[project]
name = "bert_experiment_template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate",
    "datasets>=4.4.2",
    "deepspeed",
    "scikit-learn>=1.8.0",
    "torch>=2.9.0",
    "transformers",
]
[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "openpyxl>=3.1.5",
    "pip>=25.2",
    "python-dotenv>=1.2.1",
    "tensorboard>=2.20.0",
]