[project]
name = "sglang-serve"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "deepspeed>=0.18.8",
    "orjson>=3.11.7",
    "partial-json-parser>=0.2.1.1.post7",
    "pybase64>=1.4.3",
    "sentencepiece>=0.2.1",
    "sglang>=0.5.9",
    "uvicorn>=0.42.0",
    "uvloop>=0.22.1",
    "dill>=0.4.1",
    "torch==2.9.1",
    "litellm>=1.80.0",
]


[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[tool.uv.workspace]
members = [
    "sglang-serve",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "openpyxl>=3.1.5",
    "pip>=25.2",
    "python-dotenv>=1.2.1",
    "tensorboard>=2.20.0",
]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]
